base/task_scheduler/task_tracker_posix.cc
@@ -8,7 +8,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <utility>
 
 #include "base/files/file_descriptor_watcher_posix.h"
-#include "base/logging.h"
 
 namespace base {
 namespace internal {
@@ -22,6 +21,12 @@ void TaskTrackerPosix::PerformRunTask(std::unique_ptr<Task> task) {
       watch_file_descriptor_message_loop_);
   TaskTracker::PerformRunTask(std::move(task));
 }
+
+#if DCHECK_IS_ON()
+bool TaskTrackerPosix::IsPostingBlockShutdownTaskAfterShutdownAllowed() {
+  return service_thread_handle_.is_equal(PlatformThread::CurrentHandle());
+}
+#endif
 
 }  // namespace internal
 }  // namespace base
